--- a/index.html
+++ b/index.html
@@ -477,50 +477,50 @@
       <div class="col-lg-3 col-md-4">
         <div class="w-100 turnkey_content back_office">
           <h2>Unmatched Graphics</h2>
-          <p>Track the flow of funds and gain detailed reports on your customers and their actions.</p>
+          <p>Beyond the imagination of most people, but thats what we design</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-4">
         <div class="w-100 turnkey_content back_office">
           <h2>Lightweight Game</h2>
-          <p>Attract new players and keep existing ones loyal with a wide selection of proven bonus tools.</p>
+          <p>Ultra light & portable games which supports almost every device</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-4">
         <div class="w-100 turnkey_content back_office">
           <h2>User Interactivity</h2>
-          <p>Increase the profitability of your campaigns by gaining a deeper knowledge of your customers through in-depth analysis.</p>
+          <p>We know where player will go, our user experience design is always according to that</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-4">
         <div class="w-100 turnkey_content back_office">
           <h2>Best Technology</h2>
-          <p>Customize content to fit your brand, set notifications, and engage through personalized communication with the players.</p>
+          <p>Deliver the games with the best and latest technologies and choosen based on game type</p>
         </div>
       </div>
     
       <div class="col-lg-3 col-md-4">
         <div class="w-100 turnkey_content back_office">
           <h2>CRM & CMS</h2>
-          <p>Boost traffic and entice more players with our intuitive and attractive affiliate programs.</p>
+          <p>Feature enriched CRM & CMS which provides you complete control of your business and business data</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-4">
         <div class="w-100 turnkey_content back_office">
           <h2>Bonus & Promotions</h2>
-          <p>Create an efficient and multi-level structured system in any country, attract more players, and increase your revenue.</p>
+          <p>We design the most flexible & attractive bonus & promotional systems for players</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-4">
         <div class="w-100 turnkey_content back_office">
           <h2>Affiliate & Agent</h2>
-          <p>Increase accessibility with all currencies and 250+ payment solutions with flexible configuration.</p>
+          <p>Offers Affiliate management & Agent management to run your business operations through multiple channels</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-4">
         <div class="w-100 turnkey_content back_office">
           <h2>Payment Solutions</h2>
-          <p>24/7 professional customer support in over 31 languages when you need it.</p>
+          <p>We offer integration of all the different payment options as per business needs</p>
         </div>
       </div>
     </div>
@@ -539,8 +539,8 @@
       </div>
       <div class="col-md-6">
         <div class="w-100">
-          <p data-aos="fade-left"> Our unique solutions are built on practical knowledge and market experience, empowering you with an industry-leading sportsbook, the complete choice of products, and all the essential additional services. You’ll be Holing all the Aces, ensuring players are satisfied and entertained, your operations are smooth and on-track, and your project is enduring and delivers profitable results.</p>
-          <p data-aos="fade-left"> We place the highest value on support and partnership amongst all the importance of our business, and we view our achievements through the successful realization of your ideas. With our “your problem is our problem” approach, we help you succeed and accomplish fantastic results, enabling us to strive and improve as a dynamic market leader.</p>
+          <p data-aos="fade-left">Our unique solutions are built on practical knowledge and market experience, empowering you with an industry-leading game development technologies and all the essential additional services. You’ll have all the key metrics, ensuring players are satisfied and entertained, your operations are smooth and on-track, and your business is enduring and delivers profitable results.</p>
+          <p data-aos="fade-left">We place the highest value on support and partnership amongst all the importance of our business, and we view our achievements through the successful realization of your ideas. With our “your problem is our problem” approach, we help you succeed and accomplish fantastic results, enabling us to strive and improve as a dynamic market leader. </p>
           <button data-aos="fade-up" class="btn_all" style="width: 282px;height: 62px;background: #FF7F00;margin-top: 35px;">Learn more <img src="assets/img/arrow-next.png"></button>
         </div>
       </div>
