--- a/desktop-game-development-company.html
+++ b/desktop-game-development-company.html
@@ -548,9 +548,9 @@ Area Jaipur, (Raj) India
 <!-- Chat btn -->
 
 <button class="chat_btn chat_btn_dsk"  data-bs-toggle="modal" data-bs-target="#sendusyourinquiry"><i class="fa fa-envelope"></i> Share your requirement</button>
-<a href="#" class="whatsapp_chat chat_btn_dsk" style="width: 50px;height: 50px;font-size: 30px;"><i class="fa fa-whatsapp"></i></a>
+<a href="https://api.whatsapp.com/send?phone=917597807070&text=Hello" target="_blank" class="whatsapp_chat chat_btn_dsk" style="width: 50px;height: 50px;font-size: 30px;"><i class="fa fa-whatsapp"></i></a>
 <div class="container-fluid fix_chat">
-  <a href="#" class="whatsapp_chat btn_chat"><i class="fa fa-whatsapp"></i></a>
+  <a href="https://api.whatsapp.com/send?phone=917597807070&text=Hello" target="_blank" class="whatsapp_chat btn_chat"><i class="fa fa-whatsapp"></i></a>
   <a href="#" class="whatsapp_chat btn_chat" style="background: #fcd10a;"><i class="fa fa-phone-alt" style="color: #000;"></i></a>
   <button class="chat_btn btn_chat"  data-bs-toggle="modal" data-bs-target="#sendusyourinquiry" style="background:#6e00a3;transform: none;box-shadow: none;"><i class="fa fa-envelope"></i></button>
 </div>
