--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/owl.carousel.js"></script>
 <script src="assets/js/aos.js"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5F45JXVXGK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5F45JXVXGK');
+</script>
 </head>
 <body>
 <div class="full_page">
