--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       <h1 data-aos="fade-right">One Stop Solution For your Gaming Business Idea</h1>
       <h3 data-aos="fade-right">Your Idea . Our Experience & Expertise . A Successful Product</h3>
       <p data-aos="fade-up">Turn your idea into a world class gaming product and Build a profitable business</p>
-      <p data-aos="fade-up"><button class="btn_all">Request a demo <img src="assets/img/arrow-next.png"></button></p>
+      <p data-aos="fade-up"><button data-bs-toggle="modal" data-bs-target="#requestQoute" class="btn_all">Request a demo <img src="assets/img/arrow-next.png"></button></p>
     </div>
       <!-- <div class="col-lg-6">
         <img src="assets/img/banner.png" class="w-100">
