--- a/index.html
+++ b/index.html
@@ -22,17 +22,12 @@
 <meta property="og:image:height" content="566" />
 <meta property="og:image:alt" content="mobzwaygames" />
 <meta property="og:image:type" content="image/png" />
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">  
 
 <link rel="icon" type="text/css" href="assets/img/favicon.png"> 
 <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 <link rel="stylesheet" href="assets/css/style.css">
-<link rel="stylesheet" type="text/css" href="assets/css/aos.css"> 
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,400;0,500;0,600;0,700;1,700&display=swap" rel="stylesheet">  
-
-<script src="assets/js/bootstrap.min.js"></script>
-<script src="assets/js/jquery.min.js"></script>
-<script src="assets/js/aos.js"></script>
+<link rel="stylesheet" type="text/css" href="assets/css/aos.css">
+<link rel="stylesheet" type="text/css" href="assets/css/all.min.css"> 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-249839306-1"></script>
 <script>
@@ -53,7 +48,7 @@
       <a href="tel:7878 044 044" class="mb_desk align-items-center call_btn"><i class="fa fa-phone-alt"></i> 7878 044 044 <strong>Call Us Now!</strong></a>
       <ul class="header_top_contact">
         <li>
-          <a href="tel:+91-7597807070"><i class="fa fa-whatsapp"></i> +91-7597807070</a>
+          <a href="tel:+91-7597807070"><i class="fab fa-whatsapp"></i> +91-7597807070</a>
         </li>
         <li>
           <a href="tel:+91-7878-044-044"><i class="fa fa-phone-alt"></i>+91-7878-044-044</a>
@@ -787,23 +782,23 @@ Area Jaipur, (Raj) India
   <div class="w-auto" style="">
     <ul class="footer_nav social_icon d-flex">
       <li>
-        <a href="#"><i class="fa fa-linkedin-in"></i></a>
+        <a href="#"><i class="fab fa-linkedin-in"></i></a>
       </li>
       <li>
-        <a href="#"><i class="fa fa-facebook-f"></i></a>
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
       </li>
       <li>
-        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
       </li>
 
       <li>
-        <a href="#"><i class="fa fa-pinterest-p"></i></a>
+        <a href="#"><i class="fab fa-pinterest-p"></i></a>
       </li>
       <li>
-        <a href="#"><i class="fa fa-youtube"></i></a>
+        <a href="#"><i class="fab fa-youtube"></i></a>
       </li>
       <li>
-        <a href="#"><i class="fa fa-vk"></i></a>
+        <a href="#"><i class="fab fa-vk"></i></a>
       </li>
     </ul>
   </div>
@@ -819,9 +814,9 @@ Area Jaipur, (Raj) India
 <!-- Chat btn -->
 
 <button class="chat_btn chat_btn_dsk"  data-bs-toggle="modal" data-bs-target="#sendusyourinquiry"><i class="fa fa-envelope"></i> Share your requirement</button>
-<a href="https://api.whatsapp.com/send?phone=917597807070&text=Hello" target="_blank" class="whatsapp_chat chat_btn_dsk" style="width: 50px;height: 50px;font-size: 30px;"><i class="fa fa-whatsapp"></i></a>
+<a href="https://api.whatsapp.com/send?phone=917597807070&text=Hello" target="_blank" class="whatsapp_chat chat_btn_dsk" style="width: 50px;height: 50px;font-size: 30px;"><i class="fab fa-whatsapp"></i></a>
 <div class="container-fluid fix_chat">
-  <a href="https://api.whatsapp.com/send?phone=917597807070&text=Hello" target="_blank" class="whatsapp_chat btn_chat"><i class="fa fa-whatsapp"></i></a>
+  <a href="https://api.whatsapp.com/send?phone=917597807070&text=Hello" target="_blank" class="whatsapp_chat btn_chat"><i class="fab fa-whatsapp"></i></a>
   <a href="#" class="whatsapp_chat btn_chat" style="background: #fcd10a;"><i class="fa fa-phone-alt" style="color: #000;"></i></a>
   <button class="chat_btn btn_chat"  data-bs-toggle="modal" data-bs-target="#sendusyourinquiry" style="background:#6e00a3;transform: none;box-shadow: none;"><i class="fa fa-envelope"></i></button>
 </div>
@@ -1024,6 +1019,9 @@ Area Jaipur, (Raj) India
     </div>
 </div>
 
+<script src="assets/js/bootstrap.min.js"></script>
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/aos.js"></script>
  <!-- Send us your inquiry End! -->
 
 
