--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
         <div class="product_item product_item_active" id="Sports">
           <div class="product_item_full">
           <div class="product_img">
-            <img src="assets/img/cards.png" class="w-100" />
+            <img src="assets/img/cards.avif" class="w-100" />
           </div>
           <div class="product_content">
             <h3>Sports</h3>
@@ -306,7 +306,7 @@
         <div class="product_item" id="Esports">
           <div class="product_item_full">
           <div class="product_img">
-            <img src="assets/img/dice.png" class="w-100" />
+            <img src="assets/img/dice.avif" class="w-100" />
           </div>
           <div class="product_content">
             <h3>Esports</h3>
@@ -329,7 +329,7 @@
         <div class="product_item" id="Virtual">
           <div class="product_item_full">
           <div class="product_img">
-            <img src="assets/img/multiplayer.png" class="w-100" />
+            <img src="assets/img/multiplayer.avif" class="w-100" />
           </div>
           <div class="product_content">
             <h3>Virtual sports</h3>
@@ -353,7 +353,7 @@
         <div class="product_item" id="Non-sports">
           <div class="product_item_full">
           <div class="product_img">
-            <img src="assets/img/realtime-strategy.png" class="w-100" />
+            <img src="assets/img/realtime-strategy.avif" class="w-100" />
           </div>
           <div class="product_content">
             <h3>Non-sports betting</h3>
@@ -368,7 +368,7 @@
       <div class="product_item product_item_ucasion" id="Slots">
           <div class="product_item_full">
           <div class="product_img">
-            <img src="assets/img/puzzlers.png" class="w-100" />
+            <img src="assets/img/puzzlers.avif" class="w-100" />
           </div>
           <div class="product_content">
             <h3>Slots</h3>
@@ -392,7 +392,7 @@
         <div class="product_item product_item_ucasion" id="Live_Casino">
           <div class="product_item_full">
           <div class="product_img">
-            <img src="assets/img/party-games.png" class="w-100" />
+            <img src="assets/img/party-games.avif" class="w-100" />
           </div>
           <div class="product_content">
             <h3>Live Casino</h3>
@@ -415,7 +415,7 @@
         <div class="product_item product_item_ucasion" id="Additional">
           <div class="product_item_full">
           <div class="product_img">
-            <img src="assets/img/live.png" class="w-100" />
+            <img src="assets/img/live.avif" class="w-100" />
           </div>
           <div class="product_content">
             <h3>Additional games</h3>
@@ -439,7 +439,7 @@
         <div class="product_item product_item_ucasion" id="Skill-based">
           <div class="product_item_full">
           <div class="product_img">
-            <img src="assets/img/sessions.png" class="w-100" />
+            <img src="assets/img/sessions.avif" class="w-100" />
           </div>
           <div class="product_content">
             <h3>Skill-based games</h3>
