--- a/thank-you.html
+++ b/thank-you.html
@@ -108,8 +108,8 @@
     <div class="row">
       <div class="col-lg-6">
       <h1 class="text-white" data-aos="fade-right">Thank You!</h1>
-      <h3 data-aos="fade-right" style="font-size:22px;color:#fff;"> We have received your requirement details! </h3>
-      <p class="text-white mb-0" data-aos="fade-up"> One of our representatives will get back to you by the next business day.In the meantime, you can try a demo of our product clicking the following link. </p>
+      <h3 data-aos="fade-right" style="font-size:22px;color:#fff;">We have received your requirement details!</h3>
+      <p class="text-white mb-0" data-aos="fade-up">One of our representatives will get back to you within next 24 hours. In the meantime, you can try a demo of of some of the games we already have built. Please <a style="text-decoration:none;" target="_blank" href="https://api.whatsapp.com/send?phone=917597807070&text=Send"> click here</a> to get the demo details. </p>
       
     </div>
     </div>
@@ -133,8 +133,8 @@
     <div class="row">
       <div class="col-md-12 text-center">
         <h2 class="block_title" data-aos="fade-down">Start your business journey with Mobzway</h2>
-        <p class="">Try Our Games, and explore all the features and solutions you need to start, run, and grow your business.</p>
-        <button class="btn_all btn_try_demo" data-bs-toggle="modal" data-bs-target="#requestQoute">Try Demo <img src="assets/img/arrow-next.png" style="max-width: 14px;opacity: .4;position: relative;top: 1px;margin-left: 10px;filter: inherit;"></button>
+        <p class="">Try Our Games, explore all the features and solutions which you might need to start, run and grow your business.</p>
+        <a href="https://api.whatsapp.com/send?phone=917597807070&text=Send" target="_blank" class="btn_all btn_try_demo" style="width:auto;text-decoration: none;display: inline-block;">Try Demo <img src="assets/img/arrow-next.png" style="max-width: 14px;opacity: .4;position: relative;top: 1px;margin-left: 10px;filter: inherit;"></a>
       </div>
     </div>
   </div>
