--- a/thank-you.html
+++ b/thank-you.html
@@ -109,7 +109,7 @@
       <div class="col-lg-6">
       <h1 class="text-white" data-aos="fade-right">Thank You!</h1>
       <h3 data-aos="fade-right" style="font-size:22px;color:#fff;">We have received your requirement details!</h3>
-      <p class="text-white mb-0" data-aos="fade-up">One of our representatives will get back to you within next 24 hours. In the meantime, you can try a demo of of some of the games we already have built. Please <a style="text-decoration:none;" target="_blank" href="https://api.whatsapp.com/send?phone=917597807070&text=Send"> click here</a> to get the demo details. </p>
+      <p class="text-white mb-0" data-aos="fade-up">One of our representatives will get back to you within next 24 hours. In the meantime, you can try a demo of some of the games we already have built. Please <a style="text-decoration:none;" target="_blank" href="https://api.whatsapp.com/send?phone=917597807070&text=Send"> click here</a> to get the demo details. </p>
       
     </div>
     </div>
