--- a/thank-you.html
+++ b/thank-you.html
@@ -103,7 +103,7 @@
 <!-- Header End! -->
 
 
-<div class="container-fluid banner banner_other py-indent" style="background:#f98633;">
+<div class="container-fluid banner banner_other py-indent" style="background:#f98633;padding-top: 15px;padding-bottom: 15px;">
   <div class="container">
     <div class="row">
       <div class="col-lg-6">
