--- a/thank-you.html
+++ b/thank-you.html
@@ -105,11 +105,11 @@
 
 <div class="container-fluid banner banner_other py-indent" style="background:#f98633;padding-top: 15px;padding-bottom: 15px;">
   <div class="container">
-    <div class="row">
+    <div class="row justify-content-center">
       <div class="col-lg-6">
-      <h1 class="text-white" data-aos="fade-right">Thank You!</h1>
-      <h3 data-aos="fade-right" style="font-size:22px;color:#fff;">We have received your requirement details!</h3>
-      <p class="text-white mb-0" data-aos="fade-up">One of our representatives will get back to you within next 24 hours. In the meantime, you can try a demo of some of the games we already have built. </p>
+      <h1 class="text-white text-center" data-aos="fade-right">Thank You!</h1>
+      <h3 class="text-center" data-aos="fade-right" style="font-size:22px;color:#fff;">We have received your requirement details!</h3>
+      <p class="text-white mb-0 text-center" data-aos="fade-up">One of our representatives will get back to you within next 24 hours. In the meantime, you can try a demo of some of the games we already have built. </p>
       
     </div>
     </div>
@@ -132,9 +132,10 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 text-center">
+        <a href="https://api.whatsapp.com/send?phone=917597807070&text=Send" target="_blank" class="btn_all btn_try_demo" style="width:auto;text-decoration: none;display: inline-block;">Try Demo <img src="assets/img/arrow-next.png" style="max-width: 14px;opacity: .4;position: relative;top: 1px;margin-left: 10px;filter: inherit;"></a>
         <h2 class="block_title" data-aos="fade-down">Start your business journey with Mobzway</h2>
         <p class="">Try Our Games, explore all the features and solutions which you might need to start, run and grow your business.</p>
-        <a href="https://api.whatsapp.com/send?phone=917597807070&text=Send" target="_blank" class="btn_all btn_try_demo" style="width:auto;text-decoration: none;display: inline-block;">Try Demo <img src="assets/img/arrow-next.png" style="max-width: 14px;opacity: .4;position: relative;top: 1px;margin-left: 10px;filter: inherit;"></a>
+        
       </div>
     </div>
   </div>
