--- a/thank-you.html
+++ b/thank-you.html
@@ -128,7 +128,7 @@
 <!-- Footer -->
 
 
-<div class="container-fluid getin_touch py-indent">
+<div class="container-fluid getin_touch py-indent" style="padding-top: 0;padding-bottom: 20px;">
   <div class="container">
     <div class="row">
       <div class="col-md-12 text-center">
