--- a/thank-you.html
+++ b/thank-you.html
@@ -109,7 +109,7 @@
       <div class="col-lg-6">
       <h1 class="text-white text-center" data-aos="fade-right">Thank You!</h1>
       <h3 class="text-center" data-aos="fade-right" style="font-size:22px;color:#fff;">We have received your requirement details!</h3>
-      <p class="text-white mb-0 text-center" data-aos="fade-up">One of our representatives will get back to you within next 24 hours. In the meantime, you can try a demo of some of the games we already have built. </p>
+      <p class="text-white mb-0 text-center" style="padding-right: 0;" data-aos="fade-up">One of our representatives will get back to you within next 24 hours. In the meantime, you can try a demo of some of the games we already have built. </p>
       
     </div>
     </div>
