--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
 
   gtag('config', 'UA-249839306-1');
 </script>
-
+<style>
+  .chat_btn {
+  transform: rotate(-90deg) translateY(92px);
+}
+</style>
 </head>
 <body>
 <div class="full_page">
@@ -78,7 +82,7 @@
         <li class="nav-item dropdown_menu">
           <a class="nav-link active dropdown-toggle" id="navbarDropdown" role="button">Services</a>
           <ul class="sub-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="mobilegamedevelopment.html">Mobile Game Development</a></li>
+            <li><a class="dropdown-item" href="mobile-game-development.html">Mobile Game Development</a></li>
             <li><a class="dropdown-item" href="html5-game-development.html">HTML5 Game Development</a></li>
             <li><a class="dropdown-item" href="desktop-game-development-company.html">Desktop Game Development</a></li>
             <!-- <li><a class="dropdown-item" href="web3-game-development.html">Web3 Game Development</a></li> -->
@@ -675,7 +679,7 @@
     <h3>Services</h3>
     <ul class="footer_nav">
       <li>
-        <a href="mobilegamedevelopment.html">Mobile Game Development</a>
+        <a href="mobile-game-development.html">Mobile Game Development</a>
       </li>
       <li>
         <a href="html5-game-development.html">HTML5 Game Development</a>
