--- a/mobile-game-development.html
+++ b/mobile-game-development.html
@@ -1547,11 +1547,11 @@ document.addEventListener('DOMContentLoaded', function () {
   return true;
 }
 </script>
-<script>
+<!-- <script>
   $(document).ready(function(){
     $("#requestQoute").modal('show');
   });
-</script>
+</script> -->
 
 <script>
   AOS.init();
