--- a/index.html
+++ b/index.html
@@ -903,7 +903,7 @@ Area Jaipur, (Raj) India
   <div class='zcwf_col_fld'><div class='g-recaptcha' data-sitekey='6LerTcAZAAAAAPCp-yqkRPmgR8ihu3CrcIZA0bD-' data-theme='light' data-callback='rccallback1742164000089186081' captcha-verified='false' id='recap1742164000089186081'>
     
   </div>
-  <div  id='recapErr1742164000089186081' style='font-size:12px;color:red;visibility:hidden;'>Captcha validation failed. If you are not a robot then please try again.</div>
+  <div  id='recapErr1742164000089186081' style='font-size:12px;color:red;display:none;'>Captcha validation failed. If you are not a robot then please try again.</div>
 </div>
 </div>
 </div>
@@ -1212,8 +1212,8 @@ $(window).scroll(function() {
     if(document.getElementById('recap1742164000089186081')!=undefined){
       document.getElementById('recap1742164000089186081').setAttribute('captcha-verified',true);
     }
-    if(document.getElementById('recapErr1742164000089186081')!=undefined && document.getElementById('recapErr1742164000089186081').style.visibility == 'visible' ){
-      document.getElementById('recapErr1742164000089186081').style.visibility='hidden';
+    if(document.getElementById('recapErr1742164000089186081')!=undefined && document.getElementById('recapErr1742164000089186081').style.display == 'none' ){
+      document.getElementById('recapErr1742164000089186081').style.display='none';
     }
   }
   function reCaptchaAlert1742164000089186081()
@@ -1221,7 +1221,7 @@ $(window).scroll(function() {
     var recap = document.getElementById('recap1742164000089186081');
     if( recap !=undefined && recap.getAttribute('captcha-verified') == 'false')
     {
-      document.getElementById('recapErr1742164000089186081').style.visibility='visible';
+      document.getElementById('recapErr1742164000089186081').style.display='none';
       return false;
     }
     return true;
