--- a/index.html
+++ b/index.html
@@ -819,7 +819,7 @@ Area Jaipur, (Raj) India
 <div class="container-fluid fix_chat">
   <a href="https://api.whatsapp.com/send?phone=919116005595&text=" target="_blank" class="whatsapp_chat btn_chat"><i class="fab fa-whatsapp"></i></a>
   <a href="#" class="whatsapp_chat btn_chat" style="background: #fcd10a;"><i class="fa fa-phone-alt" style="color: #000;"></i></a>
-  <button class="chat_btn btn_chat"  data-bs-toggle="modal" data-bs-target="#sendusyourinquiry" style="background:#6e00a3;transform: none;box-shadow: none;"><i class="fa fa-envelope"></i></button>
+  <button class="chat_btn btn_chat"  data-bs-toggle="modal" data-bs-target="#requestQoute" style="background:#6e00a3;transform: none;box-shadow: none;"><i class="fa fa-envelope"></i></button>
 </div>
 <!-- Chat btn End! -->
 
