--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
   <h2 class="block_title" data-aos="fade-down"> We are just click away</h2>
   <div class="w-100">
 
-    <form class="footer_form">
+    <form class="footer_form" action="thank-you.html">
       <div class="d-flex">
   <div class="mb-3 w-50 pe-2">
     <label for="fullname" class="form-label">First name </label>
