--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TXXDMSL');</script>
+<!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Mobzway Games - Solution For your Gaming Business Idea</title>
@@ -28,22 +35,24 @@
 <link rel="stylesheet" href="assets/css/style.css">
 <link rel="stylesheet" type="text/css" media="print" onload="this.onload=null;this.removeAttribute('media');" href="assets/css/aos.css">
 <link rel="stylesheet" type="text/css" media="print" onload="this.onload=null;this.removeAttribute('media');" href="assets/css/all.min.css">
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-249839306-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-249839306-1');
-</script>
 <style>
   .chat_btn {
   transform: rotate(-90deg) translateY(92px);
 }
 </style>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id=UA-249839306-1'+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TXXDMSL');</script>
+<!-- End Google Tag Manager -->
 </head>
 <body>
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TXXDMSL"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) --> 
 <div class="full_page">
 <header class="container-fluid header">
   <div class="header_inner">
@@ -114,7 +123,7 @@
           <a class="nav-link" href="contact-us.html">Contact Us</a>
         </li>
         <li class="nav-item request_btn">
-          <button data-bs-toggle="modal" data-bs-target="#requestQoute">Request a Quote</button>
+          <button data-bs-toggle="modal" id="request-a-quote" data-bs-target="#requestQoute">Request a Quote</button>
         </li>
          
       </ul>
@@ -126,7 +135,6 @@
 <!-- Header End! -->
 
 
-
 <div class="container-fluid banner banner-main">
   <div class="container">
     <div class="row">
@@ -134,7 +142,7 @@
       <h1 data-aos="fade-right">One Stop Solution For your Gaming Business Idea</h1>
       <h3 data-aos="fade-right">Your Idea . Our Experience & Expertise . <br>A Successful Product</h3>
       <p data-aos="fade-up">Turn your idea into a world class gaming product and Build a profitable business</p>
-      <p data-aos="fade-up"><button data-bs-toggle="modal" data-bs-target="#requestQoute" class="btn_all">Request a demo <img src="assets/img/arrow-next.png"></button></p>
+      <p data-aos="fade-up"><button id="requestQoutebtn" data-bs-toggle="modal" data-bs-target="#requestQoute" class="btn_all">Request a demo <img src="assets/img/arrow-next.png"></button></p>
     </div>
       <!-- <div class="col-lg-6">
         <img src="assets/img/banner.png" class="w-100">
@@ -618,7 +626,7 @@
       <div class="col-md-12 text-center">
         <h2 class="block_title" data-aos="fade-down">Start your business journey with Mobzway</h2>
         <p class="">Try Our Games, and explore all the features and solutions you need to start, run, and grow your business.</p>
-        <button class="btn_all btn_try_demo" data-bs-toggle="modal" data-bs-target="#requestQoute">Try Demo <img src="assets/img/arrow-next.png" style="max-width: 14px;opacity: .4;position: relative;top: 1px;margin-left: 10px;filter: inherit;"></button>
+        <button class="btn_all btn_try_demo" id="try-demo" data-bs-toggle="modal" data-bs-target="#requestQoute">Try Demo <img src="assets/img/arrow-next.png" style="max-width: 14px;opacity: .4;position: relative;top: 1px;margin-left: 10px;filter: inherit;"></button>
       </div>
     </div>
   </div>
@@ -814,8 +822,8 @@ Area Jaipur, (Raj) India
 
 <!-- Chat btn -->
 
-<button class="chat_btn chat_btn_dsk sharerequirment"  data-bs-toggle="modal" data-bs-target="#requestQoute"><i class="fa fa-envelope"></i> Share your requirement</button>
-<a href="https://api.whatsapp.com/send?phone=919116005595&text=" target="_blank" class="whatsapp_chat chat_btn_dsk" style="width: 50px;height: 50px;font-size: 34px;"><i class="fab fa-whatsapp"></i></a>
+<button id="sharerequirmentbtn" class="chat_btn chat_btn_dsk sharerequirment"  data-bs-toggle="modal" data-bs-target="#requestQoute"><i class="fa fa-envelope"></i> Share your requirement</button>
+<a id="whatsapp_chatbtn" href="https://api.whatsapp.com/send?phone=919116005595&text=" target="_blank" class="whatsapp_chat chat_btn_dsk" style="width: 50px;height: 50px;font-size: 34px;"><i class="fab fa-whatsapp"></i></a>
 <div class="container-fluid fix_chat">
   <a href="https://api.whatsapp.com/send?phone=919116005595&text=" target="_blank" class="whatsapp_chat btn_chat"><i class="fab fa-whatsapp"></i></a>
   <a href="#" class="whatsapp_chat btn_chat" style="background: #fcd10a;"><i class="fa fa-phone-alt" style="color: #000;"></i></a>
